--- a/src/components/pages/user/UserCard.module.css
+++ b/src/components/pages/user/UserCard.module.css
@@ -10,11 +10,11 @@
 }
 
 .user__content {
-  font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 1;
-  color: #000000;
   list-style-type: none;
+  padding: 0;
+  max-width: 65%;
 }
